# sherlock-wind

./: Dockerfile  README.md  pyproject.toml  requirements.txt  scripts.py
notebooks/: view_wind.ipynb
sherlock_wind/: example.py  format.py  main.py  storage.py  wind.py
tests/: test_sherlock_wind.py
